--- a/Booth_Frontend/src/App.css
+++ b/Booth_Frontend/src/App.css
@@ -34,6 +34,10 @@ body {
   background-size: 100% 100%;
   background-blend-mode: overlay;
 }
+.result:hover{
+  background-image:  none;
+  background-color: #3f8d66;
+}
 
 .resultbg {
   background-color: transparent;
