--- a/Booth_Frontend/src/index.css
+++ b/Booth_Frontend/src/index.css
@@ -30,8 +30,10 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
+  min-width: 500px;
   min-height: 100vh;
+  background-color: #a8d0e7;
+  background-image: linear-gradient(to bottom right, #11998e, #38ef7d);
 }
 
 h1 {
