--- a/Booth_Frontend/src/index.css
+++ b/Booth_Frontend/src/index.css
@@ -11,6 +11,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #38ef7d;
+  background-image: linear-gradient(to bottom right, #11998e, #38ef7d);
+}
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
