--- a/Booth_Frontend/src/App.css
+++ b/Booth_Frontend/src/App.css
@@ -4,10 +4,10 @@
   padding: 2rem;
 }
 
-body {
+/* body {
   background-color: #a8d0e7;
   background-image: linear-gradient(to bottom right, #11998e, #38ef7d);
-}
+} */
 
 .navbar {
   color: #ffffff;
