--- a/Booth_Frontend/src/App.css
+++ b/Booth_Frontend/src/App.css
@@ -4,10 +4,14 @@
   padding: 2rem;
 }
 
-/* body {
-  background-color: #a8d0e7;
+body {
+  background-color: #6ddb97;
   background-image: linear-gradient(to bottom right, #11998e, #38ef7d);
-} */
+  background-repeat: no-repeat;
+  background-size:100%;
+  background-position: 0% 100%;
+  background-blend-mode: normal;
+}
 
 .navbar {
   color: #ffffff;
@@ -43,6 +47,23 @@
 
 .resultbg {
   background-color: transparent;
+}
+
+.SP {
+  /* Set the background image */
+  background-image: url('./assets/SP.jfif');
+  margin-top: 3%;
+  /* Set background size (cover, contain, etc.) */
+  background-size: cover;
+  /* Set background repeat behavior (no-repeat, repeat-x, repeat-y, repeat) */
+  background-repeat: no-repeat;
+  /* Set background position */
+  background-position: center center;
+  /* Add other styles if needed */
+  /* For example, setting width and height */
+  width: 100%;
+  height: 70vh; /* Adjust this according to your design */
+  opacity: 0.7;
 }
 
 @keyframes logo-spin {
