--- a/Booth_Frontend/src/App.css
+++ b/Booth_Frontend/src/App.css
@@ -12,7 +12,10 @@ body {
   background-position: 0% 100%;
   background-blend-mode: normal;
 }
-
+button:hover{
+  background-color: #171536;
+  color: aliceblue;
+}
 .navbar {
   color: #ffffff;
   background-color: #2c724f;
