--- a/Booth_Frontend/src/App.css
+++ b/Booth_Frontend/src/App.css
@@ -33,7 +33,7 @@ button:hover{
   font-size: larger;
   font-style: italic;
   /* background-color: #3f8d66; */
-  /* background-image: linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(47, 107, 7, 0.5),
       rgba(3, 65, 11, 0.7)
@@ -42,7 +42,7 @@ button:hover{
   background-repeat: no-repeat;
   background-position: 0% 0%;
   background-size: 100% 100%;
-  background-blend-mode: overlay; */
+  background-blend-mode: overlay;
 }
 .result:hover{
   background-image:  none;
